# rule-relay

./: .env.example  .gitignore  README.md  docker-compose.yml
deploy/adguard/: start.sh
deploy/shadowsocks/: config.json  render-config.sh
docs/: configuration.md  surge.md
relay/: Cargo.toml  Dockerfile
relay/src/: adguard.rs  cache.rs  config.rs  domain.rs  main.rs  models.rs
surge/: rule-relay.js
